crates/oxc_semantic/tests/integration/snapshots/for_in.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/for_in.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced | Shared))
}

bb2: {
	(BasicBlockFlags(Implicit | Error))
}

bb3: {
	(BasicBlockFlags(Start | Referenced))
	statement
	statement
}

bb4: {
	(BasicBlockFlags(LoopLabel | Referenced | Shared))
	condition
}

bb5: {
	(BasicBlockFlags(Referenced))
}

bb6: {
	(BasicBlockFlags(Referenced))
	statement
}

bb7: {
	(BasicBlockFlags(0x0))
	statement
}

bb8: {
	(BasicBlockFlags(0x0))
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced | Shared))" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(Implicit | Error))" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(Start | Referenced))
ForStatement
VariableDeclaration" shape = box]
    4 [ label = "bb4
(BasicBlockFlags(LoopLabel | Referenced | Shared))
Condition(test)" shape = box]
    5 [ label = "bb5
(BasicBlockFlags(Referenced))" shape = box]
    6 [ label = "bb6
(BasicBlockFlags(Referenced))
ExpressionStatement" shape = box]
    7 [ label = "bb7
(BasicBlockFlags(0x0))
ExpressionStatement" shape = box]
    8 [ label = "bb8
(BasicBlockFlags(0x0))" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 3 [ label="NewFunction"]
    4 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    6 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 4 [ label="Normal"]
    4 -> 6 [ label="Jump", color=green]
    6 -> 5 [ label="Backedge", color=grey]
    5 -> 4 [ label="Backedge", color=grey]
    4 -> 7 [ label="Normal"]
    8 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 8 [ label="Normal"]
}
