crates/oxc_semantic/tests/integration/snapshots/for_iteration_target.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/for_iteration_target.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {
	condition
}

bb4: {

}

bb5: {
	statement
	statement
	continue
}

bb6: {

}

bb7: {
	iteration <of>
}

bb8: {
	unreachable
}

bb9: {
	statement
	statement
}

bb10: {

}

bb11: {
	condition
}

bb12: {

}

bb13: {
	statement
	statement
}

bb14: {

}

bb15: {
	iteration <in>
}

bb16: {
	statement
	statement
	statement
}

bb17: {
	condition
}

bb18: {

}

bb19: {

}

bb20: {

}

bb21: {
	iteration <in>
}

bb22: {
	statement
	statement
	break
}

bb23: {
	unreachable
}

bb24: {
	statement
}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
ForOfStatement" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
Condition(CallExpression(getTarget))" shape = box]
    4 [ label = "bb4" shape = box]
    5 [ label = "bb5
BlockStatement
ExpressionStatement
continue" shape = box]
    6 [ label = "bb6" shape = box]
    7 [ label = "bb7
Iteration(CallExpression(getValues) of expr)" shape = box]
    8 [ label = "bb8
unreachable" shape = box]
    9 [ label = "bb9
ExpressionStatement
ForInStatement" shape = box]
    10 [ label = "bb10" shape = box]
    11 [ label = "bb11
Condition(CallExpression(getKey))" shape = box]
    12 [ label = "bb12" shape = box]
    13 [ label = "bb13
BlockStatement
ExpressionStatement" shape = box]
    14 [ label = "bb14" shape = box]
    15 [ label = "bb15
Iteration(CallExpression(getObject) in expr)" shape = box]
    16 [ label = "bb16
ExpressionStatement
ForInStatement
VariableDeclaration" shape = box]
    17 [ label = "bb17
Condition(CallExpression(initialize))" shape = box]
    18 [ label = "bb18" shape = box]
    19 [ label = "bb19" shape = box]
    20 [ label = "bb20" shape = box]
    21 [ label = "bb21
Iteration(CallExpression(getObject) in expr)" shape = box]
    22 [ label = "bb22
BlockStatement
ExpressionStatement
break" shape = box]
    23 [ label = "bb23
unreachable" shape = box]
    24 [ label = "bb24
ExpressionStatement" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    5 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 3 [ label="Normal"]
    3 -> 4 [ label="Normal"]
    3 -> 5 [ label="Normal"]
    4 -> 5 [ label="Normal"]
    6 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    8 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 8 [ label="Unreachable", style="dotted"]
    9 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 6 [ label="Normal"]
    6 -> 7 [ label="Normal"]
    7 -> 2 [ label="Jump", color=green]
    8 -> 7 [ label="Backedge", style="dotted", color=grey]
    7 -> 9 [ label="Normal"]
    5 -> 7 [ label="Jump", color=green]
    10 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    11 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    12 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    13 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    10 -> 11 [ label="Normal"]
    11 -> 12 [ label="Normal"]
    11 -> 13 [ label="Normal"]
    12 -> 13 [ label="Normal"]
    14 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    15 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    16 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    9 -> 14 [ label="Normal"]
    14 -> 15 [ label="Normal"]
    15 -> 10 [ label="Jump", color=green]
    13 -> 15 [ label="Backedge", color=grey]
    15 -> 16 [ label="Normal"]
    17 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    18 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    19 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    16 -> 17 [ label="Normal"]
    17 -> 18 [ label="Normal"]
    17 -> 19 [ label="Normal"]
    18 -> 19 [ label="Normal"]
    20 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    21 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    22 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    23 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    22 -> 23 [ label="Unreachable", style="dotted"]
    24 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    19 -> 20 [ label="Normal"]
    20 -> 21 [ label="Normal"]
    21 -> 22 [ label="Jump", color=green]
    23 -> 21 [ label="Backedge", style="dotted", color=grey]
    21 -> 24 [ label="Normal"]
    22 -> 24 [ label="Jump", color=green]
}
