crates/oxc_semantic/tests/integration/snapshots/function_as_expression.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/function_as_expression.js
snapshot_kind: text
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {
	return
}

bb4: {
	statement
}

bb5: {

}

bb6: {
	return
}

bb7: {
	statement
}

bb8: {

}

bb9: {
	return
}

bb10: {
	statement
}

bb11: {

}

bb12: {
	return
}

bb13: {
	statement
}

bb14: {

}

bb15: {
	return
}

bb16: {
	statement
}

bb17: {

}

bb18: {
	return
}

bb19: {
	statement
}

bb20: {

}

bb21: {
	return
}

bb22: {
	statement
}

bb23: {

}

bb24: {
	return
}

bb25: {

}

bb26: {

}

bb27: {
	statement
}

bb28: {

}

bb29: {
	return
}

bb30: {

}

bb31: {

}

bb32: {
	statement
}

bb33: {

}

bb34: {
	return
}

bb35: {
	statement
}

bb36: {

}

bb37: {
	return
}

bb38: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
ExpressionStatement" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
return" shape = box]
    4 [ label = "bb4
ExpressionStatement" shape = box]
    5 [ label = "bb5" shape = box]
    6 [ label = "bb6
return" shape = box]
    7 [ label = "bb7
ExportDefaultDeclaration" shape = box]
    8 [ label = "bb8" shape = box]
    9 [ label = "bb9
return" shape = box]
    10 [ label = "bb10
ExpressionStatement" shape = box]
    11 [ label = "bb11" shape = box]
    12 [ label = "bb12
return" shape = box]
    13 [ label = "bb13
ExpressionStatement" shape = box]
    14 [ label = "bb14" shape = box]
    15 [ label = "bb15
return" shape = box]
    16 [ label = "bb16
ExpressionStatement" shape = box]
    17 [ label = "bb17" shape = box]
    18 [ label = "bb18
return" shape = box]
    19 [ label = "bb19
ExpressionStatement" shape = box]
    20 [ label = "bb20" shape = box]
    21 [ label = "bb21
return" shape = box]
    22 [ label = "bb22
ExpressionStatement" shape = box]
    23 [ label = "bb23" shape = box]
    24 [ label = "bb24
return" shape = box]
    25 [ label = "bb25" shape = box]
    26 [ label = "bb26" shape = box]
    27 [ label = "bb27
ExpressionStatement" shape = box]
    28 [ label = "bb28" shape = box]
    29 [ label = "bb29
return" shape = box]
    30 [ label = "bb30" shape = box]
    31 [ label = "bb31" shape = box]
    32 [ label = "bb32
ExpressionStatement" shape = box]
    33 [ label = "bb33" shape = box]
    34 [ label = "bb34
return" shape = box]
    35 [ label = "bb35
ExpressionStatement" shape = box]
    36 [ label = "bb36" shape = box]
    37 [ label = "bb37
return" shape = box]
    38 [ label = "bb38" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 3 [ label="NewFunction"]
    4 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 4 [ label="Normal"]
    6 -> 5 [ label="Error(Implicit)", style=dashed, color=red]
    4 -> 6 [ label="NewFunction"]
    7 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    4 -> 7 [ label="Normal"]
    9 -> 8 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 9 [ label="NewFunction"]
    10 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 10 [ label="Normal"]
    12 -> 11 [ label="Error(Implicit)", style=dashed, color=red]
    10 -> 12 [ label="NewFunction"]
    13 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    10 -> 13 [ label="Normal"]
    15 -> 14 [ label="Error(Implicit)", style=dashed, color=red]
    13 -> 15 [ label="NewFunction"]
    16 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    13 -> 16 [ label="Normal"]
    18 -> 17 [ label="Error(Implicit)", style=dashed, color=red]
    16 -> 18 [ label="NewFunction"]
    19 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    16 -> 19 [ label="Normal"]
    21 -> 20 [ label="Error(Implicit)", style=dashed, color=red]
    19 -> 21 [ label="NewFunction"]
    22 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    19 -> 22 [ label="Normal"]
    24 -> 23 [ label="Error(Implicit)", style=dashed, color=red]
    22 -> 24 [ label="NewFunction"]
    25 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    22 -> 25 [ label="Normal"]
    26 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    27 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    25 -> 26 [ label="Normal"]
    25 -> 27 [ label="Normal"]
    26 -> 27 [ label="Normal"]
    29 -> 28 [ label="Error(Implicit)", style=dashed, color=red]
    27 -> 29 [ label="NewFunction"]
    30 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    27 -> 30 [ label="Normal"]
    31 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    32 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    30 -> 31 [ label="Normal"]
    30 -> 32 [ label="Normal"]
    31 -> 32 [ label="Normal"]
    34 -> 33 [ label="Error(Implicit)", style=dashed, color=red]
    32 -> 34 [ label="NewFunction"]
    35 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    32 -> 35 [ label="Normal"]
    37 -> 36 [ label="Error(Implicit)", style=dashed, color=red]
    35 -> 37 [ label="NewFunction"]
    38 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    35 -> 38 [ label="Normal"]
}
