crates/oxc_semantic/tests/integration/snapshots/index_into_object_with_symbol_as_arg.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/index_into_object_with_symbol_as_arg.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start))
	statement
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start))
ExpressionStatement" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
}
