crates/oxc_semantic/tests/integration/snapshots/labeled_block_break.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/labeled_block_break.js
---
bb0: {

}

bb1: {
	statement
}

bb2: {

}

bb3: {
	statement
}

bb4: {
	statement
	statement
	statement
	statement
}

bb5: {
	condition
}

bb6: {
	statement
	break <label>
}

bb7: {
	unreachable
}

bb8: {

}

bb9: {

}

bb10: {

}

digraph {
    0 [ label = "bb0" shape = box]
    1 [ label = "bb1
TryStatement" shape = box]
    2 [ label = "bb2" shape = box]
    3 [ label = "bb3
BlockStatement" shape = box]
    4 [ label = "bb4
BlockStatement
LabeledStatement(LABEL)
BlockStatement
IfStatement" shape = box]
    5 [ label = "bb5
Condition(IdentifierReference(condition))" shape = box]
    6 [ label = "bb6
BlockStatement
break <LABEL>" shape = box]
    7 [ label = "bb7
unreachable" shape = box]
    8 [ label = "bb8" shape = box]
    9 [ label = "bb9" shape = box]
    10 [ label = "bb10" shape = box]
    1 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    3 -> 2 [ label="Error(Explicit)", color=red]
    4 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    2 -> 4 [ label="Normal"]
    5 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    6 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    7 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    6 -> 7 [ label="Unreachable", style="dotted"]
    8 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    4 -> 5 [ label="Normal"]
    7 -> 8 [ label="Normal", style="dotted"]
    5 -> 6 [ label="Jump", color=green]
    4 -> 8 [ label="Normal"]
    9 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    8 -> 9 [ label="Normal"]
    6 -> 9 [ label="Jump", color=green]
    10 -> 0 [ label="Error(Implicit)", color=red, style=dashed]
    1 -> 3 [ label="Normal"]
    3 -> 10 [ label="Normal"]
    9 -> 10 [ label="Normal"]
}
