crates/oxc_semantic/tests/integration/snapshots/labelled_try_break.snap
---
source: crates/oxc_semantic/tests/integration/cfg.rs
expression: snapshot
input_file: crates/oxc_semantic/tests/integration/cfg_fixtures/labelled_try_break.js
---
bb0: {
	(BasicBlockFlags(Implicit | Error))
}

bb1: {
	(BasicBlockFlags(Start | Referenced | Shared))
	statement
}

bb2: {
	(BasicBlockFlags(Implicit | Error))
}

bb3: {
	(BasicBlockFlags(Start | Referenced))
	statement
	statement
}

bb4: {
	(BasicBlockFlags(Referenced | Finalize))
}

bb5: {
	(BasicBlockFlags(Referenced | Shared))
	statement
	return <value>
}

bb6: {
	(BasicBlockFlags(Unreachable | Referenced))
	unreachable
}

bb7: {
	(BasicBlockFlags(Referenced | Shared))
	break <label>
}

bb8: {
	(BasicBlockFlags(Unreachable | Referenced))
	unreachable
}

bb9: {
	(BasicBlockFlags(Unreachable | Referenced))
}

bb10: {
	(BasicBlockFlags(Referenced))
	return <value>
}

bb11: {
	(BasicBlockFlags(Unreachable))
	unreachable
}

bb12: {
	(BasicBlockFlags(0x0))
}

digraph {
    0 [ label = "bb0
(BasicBlockFlags(Implicit | Error))" shape = box]
    1 [ label = "bb1
(BasicBlockFlags(Start | Referenced | Shared))
VariableDeclaration" shape = box]
    2 [ label = "bb2
(BasicBlockFlags(Implicit | Error))" shape = box]
    3 [ label = "bb3
(BasicBlockFlags(Start | Referenced))
LabeledStatement(label)
TryStatement" shape = box]
    4 [ label = "bb4
(BasicBlockFlags(Referenced | Finalize))" shape = box]
    5 [ label = "bb5
(BasicBlockFlags(Referenced | Shared))
BlockStatement
return <value>" shape = box]
    6 [ label = "bb6
(BasicBlockFlags(Unreachable | Referenced))
unreachable" shape = box]
    7 [ label = "bb7
(BasicBlockFlags(Referenced | Shared))
break <label>" shape = box]
    8 [ label = "bb8
(BasicBlockFlags(Unreachable | Referenced))
unreachable" shape = box]
    9 [ label = "bb9
(BasicBlockFlags(Unreachable | Referenced))" shape = box]
    10 [ label = "bb10
(BasicBlockFlags(Referenced))
return <value>" shape = box]
    11 [ label = "bb11
(BasicBlockFlags(Unreachable))
unreachable" shape = box]
    12 [ label = "bb12
(BasicBlockFlags(0x0))" shape = box]
    1 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 3 [ label="NewFunction"]
    5 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    5 -> 4 [ label="Finalize"]
    6 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    6 -> 4 [ label="Finalize", style="dotted"]
    5 -> 6 [ label="Unreachable", style="dotted"]
    7 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    4 -> 7 [ label="Normal"]
    8 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    7 -> 8 [ label="Unreachable", style="dotted"]
    9 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    3 -> 5 [ label="Normal"]
    8 -> 9 [ label="Unreachable", style="dotted"]
    10 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    9 -> 10 [ label="Normal", style="dotted"]
    7 -> 10 [ label="Jump", color=green]
    11 -> 2 [ label="Error(Implicit)", style=dashed, color=red]
    10 -> 11 [ label="Unreachable", style="dotted"]
    12 -> 0 [ label="Error(Implicit)", style=dashed, color=red]
    1 -> 12 [ label="Normal"]
}
